Stop Stretching!!

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ a {color: #2b2bf6;}
 #content 	{width: auto; height: auto; min-height: 1000px; 	margin: 0; padding: 5px; border: 0; float: left; background: #92bdcc;}    
 #content p 	{font-family: Arial;font-size: 14px}       
 #content a 	{color:blue;}
-#footer 	{width: auto; height: auto; min-height: 50px; margin: 0; padding: 0; border: 0; background: #508ca0;}                            
+#footer 	{width: auto; height: auto; min-height: 150px; margin: 0; padding: 0; border: 0; background: #508ca0;}                            
 
 html, body {
 	height:auto;
@@ -24,10 +24,6 @@ body {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 30%;
-	max-height: 30%;
-	min-width: 30%;
-	min-height: 30%;
 }
 
 div.tcenter {
